# sprint1/API/app/Http/Controllers/CategoryController.php
@@ -32,7 +32,7 @@ class CategoryController extends Controller
      *          description="Successful operation",
      *          @OA\JsonContent(
      *              type="array",
-     *              @OA\Items(ref="#/components/schemas/CategoryResponse")
+     *              @OA\Items(ref="#/components/schemas/CategoryTreeResponse")
      *          )
      *       ),
      *      @OA\Response(
@@ -156,7 +156,7 @@ class CategoryController extends Controller
      *      @OA\Response(
      *          response=200,
      *          description="Successful operation",
-     *          @OA\JsonContent(ref="#/components/schemas/CategoryResponse")
+     *          @OA\JsonContent(ref="#/components/schemas/CategoryTreeResponse")
      *       ),
      *      @OA\Response(
      *          response=404,
