# sprint3/API/app/Models/ProductImage.php
@@ -16,7 +16,6 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
  *         @OA\Property(property="source_url", type="string"),
  *         @OA\Property(property="file_name", type="string"),
  *         @OA\Property(property="title", type="string"),
- *         @OA\Property(property="created_at", type="string", example="2022-08-01 08:24:56"),
  *         @OA\Property(property="id", type="integer")
  *     }
  * )
