# sprint5/API/app/Models/Category.php
@@ -18,6 +18,22 @@ use Illuminate\Database\Eloquent\Relations\HasMany;
  * )
  *
  * @OA\Schema(
+ *       schema="CategoryTreeResponse",
+ *       type="object",
+ *       title="CategoryTreeResponse",
+ *       properties={
+ *           @OA\Property(property="id", type="integer"),
+ *           @OA\Property(property="parent_id", type="integer"),
+ *           @OA\Property(property="name", type="string", example="new category"),
+ *           @OA\Property(property="slug", type="string", example="new-category"),
+ *                @OA\Property(
+ *                property="sub_categories",
+ *                type="array",
+ *                @OA\Items(ref="#/components/schemas/CategoryResponse")
+ *            )
+ *       }
+ *   )
+ * @OA\Schema(
  *     schema="CategoryResponse",
  *     type="object",
  *     title="CategoryResponse",
