# sprint5/API/app/Models/Product.php
@@ -46,7 +46,7 @@ class Product extends BaseModel
 
     protected $table = 'products';
     protected $fillable = ['name', 'description', 'category_id', 'brand_id', 'price', 'product_image_id', 'is_location_offer', 'is_rental', 'stock'];
-    protected $hidden = ['stock', 'created_at', 'updated_at'];
+    protected $hidden = ['brand_id', 'category_id', 'product_image_id', 'stock', 'created_at', 'updated_at'];
     protected $appends = ['in_stock'];
     protected $filters = ['between', 'sort'];
 
